--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "serve": "nodemon ./bin/www",
-    "serveDebug": "DEBUG=mini-message-board:* npm serve"
+    "serveDebug": "DEBUG=mini-message-board:* npm run serve"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
